# MLP

./: README.md
src/: CMakeLists.txt  Makefile  README.md
src/MLP/: CMakeLists.txt
src/MLP/includes/: CrossValidDialog.h  FileImportWidget.h  GraphView.h  Mainwindow.h  Painter.h  TestingDialog.h  TrainingDialog.h
src/MLP/src/: CrossValidDialog.cc  FileImportWidget.cc  GraphView.cc  Mainwindow.cc  Painter.cc  TestingDialog.cc  TrainingDialog.cc  main.cc
src/MLP/ui/: CrossValidDialog.ui  FileImportWidget.ui  GraphView.ui  Mainwindow.ui  Painter.ui  TestingDialog.ui  TrainingDialog.ui
src/Network/: CMakeLists.txt
src/Network/includes/: ActivationFunction.h  GraphPerceptron.h  Layer.h  MatrixPerceptron.h  Network.h  NetworkControler.h  Neuron.h  Perceptron.h  PerceptronType.h
src/Network/src/: ActivateFunction.cc  GraphPerceptron.cc  Layer.cc  MatrixPerceptron.cc  Network.cc  NetworkControler.cc  Neuron.cc  Perceptron.cc
src/Utils/: CMakeLists.txt
src/Utils/includes/: FileManager.h  Logger.h  Matrix.h
src/Utils/src/: FileManager.cc  Logger.cc  Matrix.cc
src/allocators/: CMakeLists.txt
src/allocators/include/: Allocator.h  LinearAllocator.h  STLAdapter.h  UtilityAllocator.h
src/allocators/src/: Allocator.cc  LinearAllocator.cc
src/custom_plot/: CMakeLists.txt
src/custom_plot/include/: qcustomplot.h
src/easy_bmp/includes/: EasyBMP.h  EasyBMP_BMP.h
src/res/Weights/: G_2_100_77.wt  G_2_100_82.wt  M_10_100_81.wt  M_2_100_85.wt  M_2_100_92.wt  M_3_100_88.wt  M_3_100_90.wt
src/res/kernels/: kernel.cl  logic.cl
src/tests/: CMakeLists.txt
src/tests/src/: tests.cc
